bobs burgers site fix

--- a/bobsBurgers/style/mediaQuery.css
+++ b/bobsBurgers/style/mediaQuery.css
@@ -11,3 +11,45 @@
         justify-content: center;
     }
 }
+
+@media (max-width: 1200px) {
+    .newNav {
+        width: 100%;
+        height: 65px;
+        flex-direction: row;
+        align-content: center;
+        right: 0;
+        top: -65px;
+        background-color: #F8CE4D;
+    }
+    .newNavAppear {
+        top: 0;
+    }
+    .newNavItem {
+        margin: 0 10px;
+        color: black;
+    }
+    .locationsPage,
+    .menuPage,
+    .aboutPage {
+        padding-top: 65px;
+    }
+}
+
+@media (max-width: 400px) {
+    .newNav {
+        height: 50px;
+    }
+    .newNavItem {
+        height: 50px;
+        width: 30px;
+    }
+    .socialRow .socialIcon {
+        margin: 0 5px;
+    }
+    .locationsPage,
+    .menuPage,
+    .aboutPage {
+        padding-top: 40px;
+    }
+}
